project/final_project/solution1/csim/report/hardware_encoding_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../Server/Testbench.cpp in debug mode
../../../../Server/Testbench.cpp: In function ‘int main()’:
../../../../Server/Testbench.cpp:74:62: error: cannot convert ‘matrix_type* {aka unsigned char*}’ to ‘uint16_t* {aka short unsigned int*}’ for argument ‘2’ to ‘void hardware_encoding(unsigned char*, uint16_t*, int*, int*, int*)’
  hardware_encoding(Input, Output_HW, size_HW, hw_length,size2);
                                                              ^
make: *** [csim.mk:72: obj/Testbench.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
